--- a/front/Restorumba/app/src/main/res/layout/activity_basket.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_basket.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    android:background="@drawable/light_theme_background">
+    style="@style/ScreenBackground">
 
     <ImageButton
         android:id="@+id/home"
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView25"
+        style="@style/IconColor"
         android:layout_marginStart="24dp"/>
 
     <TextView
@@ -23,6 +24,8 @@
         android:layout_height="wrap_content"
         android:text="@string/basket"
         android:theme="@style/HeadingText"
+        style="@style/TextColor"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +37,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/rounded_rectangle_20_radius_shape"
-        android:backgroundTint="@color/white"
+        style="@style/CardBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView25">
@@ -57,6 +60,7 @@
             android:layout_marginTop="5dp"
             android:text="@string/current_dish"
             android:theme="@style/SmallText"
+            style="@style/TextColor"
             app:layout_constraintStart_toEndOf="@+id/imageView9"
             app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
@@ -69,6 +73,7 @@
             android:text="@string/current_price"
             android:textColor="#64BC78"
             android:theme="@style/SmallText"
+            style="@style/PriceColor"
             app:layout_constraintBottom_toBottomOf="@+id/imageView9"
             app:layout_constraintStart_toEndOf="@+id/imageView9"
             app:layout_constraintTop_toBottomOf="@+id/textView26" />
@@ -126,7 +131,7 @@
         android:layout_marginStart="-93dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/rounded_rectangle_20_radius_shape"
-        android:backgroundTint="@color/white"
+        style="@style/CardBackground"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
 
