--- a/front/Restorumba/app/src/main/res/layout/activity_settings.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_settings.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="33dp"
         android:text="@string/settings"
-        android:theme="@style/HeadingText"
+        android:textSize="24sp"
+        android:fontFamily="@font/nunito_semibold"
+        style="@style/TextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -35,7 +37,7 @@
             android:layout_marginTop="25dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/dark_mode_switch"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="18sp"
             android:theme="@style/Switch"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +51,7 @@
             android:layout_marginTop="50dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/smartphone_vibration_switch"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="18sp"
             android:theme="@style/Switch"
             app:layout_constraintEnd_toEndOf="parent"
