--- a/front/Restorumba/app/src/main/res/layout/splash.xml
+++ b/front/Restorumba/app/src/main/res/layout/splash.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/splash"
-    android:background="@drawable/preview">
+    style="@style/Splash">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
