--- a/front/Restorumba/app/src/main/res/layout/activity_edit_profile.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    android:background="@drawable/light_theme_background">
+    style="@style/ScreenBackground">
 
     <ImageButton
         android:id="@+id/link_to_order"
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="22dp"
         android:layout_marginTop="32dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/ic_home"
+        android:background="@drawable/ic_home"
+        style="@style/IconColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -24,7 +24,7 @@
         android:layout_height="30dp"
         android:fontFamily="@font/nunito_semibold"
         android:text="@string/edit"
-        android:textColor="#170C10"
+        style="@style/TextColor"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/link_to_order"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:layout_width="320dp"
         android:layout_height="481dp"
         android:background="@drawable/rounded_rectangle_20_radius_shape"
-        android:backgroundTint="@color/white"
+        style="@style/CardBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView22"
@@ -49,7 +49,7 @@
             android:background="@mipmap/ic_profile_picture_2_foreground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/textView29"
@@ -59,7 +59,7 @@
             android:layout_marginTop="48dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/name"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageButton9" />
@@ -71,7 +71,7 @@
             android:layout_marginStart="138dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/user_name"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView29"
             app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
             android:layout_marginStart="31dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/phone"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView29"
@@ -97,7 +97,7 @@
             android:layout_marginStart="138dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/user_phone"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView30"
             app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
             android:layout_marginStart="31dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/email"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView30"
@@ -123,7 +123,7 @@
             android:layout_marginStart="138dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/user_email"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView32"
             app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +136,7 @@
             android:layout_marginStart="31dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/password"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView32"
@@ -148,7 +148,7 @@
             android:layout_marginStart="138dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="@string/user_password"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView34"
             app:layout_constraintStart_toStartOf="parent"
