--- a/front/Restorumba/app/src/main/res/layout/activity_order.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_order.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    android:background="@drawable/light_theme_background">
+    style="@style/ScreenBackground">
 
     <ImageView
         android:id="@+id/imageView4"
@@ -14,6 +14,7 @@
         android:layout_marginStart="19dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/ic_location"
+        style="@style/IconColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,7 +35,7 @@
         android:layout_marginStart="10dp"
         android:fontFamily="@font/nunito_semibold"
         android:text="@string/address"
-        android:textColor="#170C10"
+        style="@style/TextColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
@@ -61,6 +62,7 @@
             android:fontFamily="@font/nunito_bold"
             android:text="@string/drinks"
             android:textSize="16sp"
+            style="@style/TextColor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -73,6 +75,7 @@
             android:fontFamily="@font/nunito_bold"
             android:text="@string/combos"
             android:textSize="16sp"
+            style="@style/TextColor"
             app:layout_constraintStart_toEndOf="@+id/textView5"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -85,6 +88,7 @@
             android:fontFamily="@font/nunito_bold"
             android:text="@string/snacks"
             android:textSize="16sp"
+            style="@style/TextColor"
             app:layout_constraintStart_toEndOf="@+id/textView6"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -96,6 +100,7 @@
             android:fontFamily="@font/nunito_bold"
             android:text="@string/salads"
             android:textSize="16sp"
+            style="@style/TextColor"
             app:layout_constraintStart_toEndOf="@+id/textView15"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -126,7 +131,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:fontFamily="@font/nunito_bold"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:text="@string/current_dish"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/imageView8"
@@ -140,7 +145,7 @@
             android:layout_marginTop="7dp"
             android:fontFamily="@font/nunito_bold"
             android:text="@string/current_price"
-            android:textColor="#64BC78"
+            style="@style/PriceColor"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/imageView8"
             app:layout_constraintTop_toBottomOf="@+id/textView16" />
@@ -153,7 +158,7 @@
             android:layout_marginTop="4dp"
             android:fontFamily="@font/nunito_bold"
             android:text="@string/old_price"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             app:layout_constraintStart_toEndOf="@+id/imageView8"
             app:layout_constraintTop_toBottomOf="@+id/textView17"/>
 
@@ -174,7 +179,7 @@
             android:layout_marginTop="25dp"
             android:fontFamily="@font/nunito_bold"
             android:text="@string/desc_title"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView8" />
@@ -187,7 +192,7 @@
             android:layout_marginTop="15dp"
             android:fontFamily="@font/nunito"
             android:text="@string/dish_description"
-            android:textColor="#170C10"
+            style="@style/TextColor"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
