--- a/front/Restorumba/app/src/main/res/layout/activity_order_history.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_order_history.xml
@@ -5,15 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    android:background="@drawable/light_theme_background">
+    style="@style/ScreenBackground">
 
     <TextView
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="33dp"
+        android:fontFamily="@font/nunito_semibold"
+        android:textSize="24sp"
         android:text="@string/order_history"
-        android:theme="@style/HeadingText"
+        style="@style/TextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
