--- a/front/Restorumba/app/src/main/res/values/colors.xml
+++ b/front/Restorumba/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#170C10</color>
+    <color name="white">#FFFFFF</color>
+    <color name="red">#FF222C</color>
+    <color name="pink">#FF888E</color>
+    <color name="light_grey">#919191</color>
+    <color name="dark_grey">#5A5959</color>
+    <color name="darker_grey">#2B2B2B</color>
+    <color name="yellow">#FFEF3D</color>
+    <color name="light_green">#64BC78</color>
 </resources>
