--- a/front/Restorumba/app/src/main/res/values/themes.xml
+++ b/front/Restorumba/app/src/main/res/values/themes.xml
@@ -1,10 +1,25 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Restorumba" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/white</item>
         <item name="android:windowIsTranslucent">true</item>
+
+        <item name="android:windowFullscreen">true</item>
     </style>
 
-    <style name="Theme.Restorumba" parent="Base.Theme.Restorumba" />
+    <style name="Theme.MyApplication" parent="Base.Theme.Restorumba" />
+
+    <style name="ScreenBackground"><item name="android:background">@drawable/light_theme_background</item></style>
+    <style name="TextColor"><item name="android:textColor">@color/black</item></style>
+    <style name="HintTextColor"><item name="android:textColor">@color/dark_grey</item></style>
+    <style name="PriceColor"><item name="android:textColor">@color/light_green</item></style>
+    <style name="IconColor"><item name="android:backgroundTint">@color/black</item></style>
+    <style name="RadioColor">
+        <item name="android:textColor">@color/black</item>
+        <item name="buttonTint">@color/black</item>
+    </style>
+    <style name="CardBackground"><item name="android:backgroundTint">@color/white</item></style>
+    <style name="Splash">
+        <item name="android:background">@drawable/light_preview</item>
+    </style>
 </resources>
