--- a/front/Restorumba/app/src/main/res/layout/activity_profile.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_profile.xml
@@ -54,7 +54,7 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/link_to_login"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginStart="14dp"
@@ -66,6 +66,7 @@
             app:layout_constraintTop_toTopOf="@+id/imageView"/>
 
         <TextView
+            android:id="@+id/phone"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginStart="14dp"
@@ -75,7 +76,7 @@
             style="@style/TextColor"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/link_to_login"/>
+            app:layout_constraintTop_toBottomOf="@+id/name"/>
 
         <ImageButton
             android:id="@+id/link_to_edit"
