--- a/front/Restorumba/app/src/main/res/layout/activity_order.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_order.xml
@@ -202,6 +202,7 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
+        android:id="@+id/shake"
         android:layout_width="150dp"
         android:layout_height="36dp"
         android:backgroundTint="#FF222C"
